@startuml

skinparam packageStyle rectangle

package "Sistema Académico SYSACAD" {

    package "Personas" {
        abstract class Usuario {
            -usuario: str
            -password: str
            -email: str
        }

        class Alumno {
            -apellido: str
            -nombre: str
            -nroDocumento: str
            -tipoDocumento: TipoDocumento
            -fechaNacimiento: str
            -sexo: str // “M” o “F”
            -nroLegajo: int
            -fechaIngreso: date
        }

        class Docente {
            -apellido: str
            -nombre: str
            -telefono: str
            -email: str
        }

        class Autoridad {
            -nombre: str
            -cargo: str
            -telefono: str
            -email: str
        }
        
        enum TipoDocumento {
            DNI
            LibretaCivica
            LibretaEnrolamiento
            Pasaporte
        }

        Usuario <|-- Alumno
        Usuario <|-- Docente
        Usuario <|-- Autoridad
    }

    package "Academia" {
        class Universidad {
            -nombre: str
            -sigla: str
        }

        class Facultad {
            -nombre: str
            -abreviatura: str
            -domicilio: str
            -ciudad: str
            -telefono: str
            -email: str
        }

        class Carrera {
            -nombre: str
            -titulo: str
        }

        class PlanEstudio {
            -nombre: str
            -fechaInicio: date
            -fechaFin: date
            -observacion: str
        }

        class Materia {
            -nombre: str
            -codigo: str
            -observacion: str
        }

        class Correlativa {
            -tipo: str // "Cursada" o "Final"
        }

        class Cursada {
            -anio: int
            -semestre: int
            -notaParcial1: float
            -notaParcial2: float
            -promedio: float
        }

        class Inscripcion {
            -fecha: date
            -tipo: str // "Cursado" o "Final"
        }

        class NotaFinal {
            -nota: float
            -fecha: date
        }

        class Acta {
            -numero: str
            -fecha: date
        }

        class Certificado {
            -tipo: str
            -fechaEmision: date
        }

        class EstadoAcademico {
            -promedio: float
            -materiasAprobadas: int
            -materiasPendientes: int
        }

        Carrera -- Facultad
        Carrera -- PlanEstudio
        PlanEstudio -- Materia
        Materia --> Correlativa : tiene
        Alumno --> Inscripcion
        Inscripcion --> Materia
        Alumno --> Cursada
        Cursada --> Materia
        Alumno --> NotaFinal
        NotaFinal --> Materia
        NotaFinal --> Acta
        Alumno --> Certificado
        Alumno --> EstadoAcademico
        Docente --> Materia
        Facultad <-- Autoridad
        Universidad --> Facultad
    }

    package "Otros" {
        class Cargo {
            -nombre: str
            -puntos: int
        }

        class CategoriaCargo {
            -nombre: str
        }

        class TipoDedicacion {
            -nombre: str
            -observacion: str
        }

        Cargo --> CategoriaCargo
        Cargo --> TipoDedicacion
        Autoridad --> Cargo
    }
}
@enduml
